# Latest-Spigot

./: .gitignore  Cargo.toml  Makefile  README.md  main.go
.github/workflows/: release.yml
src/: main.rs
